TAG: dlautils-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: dlautils-6-0-7-1
DATE: 01/04/2017
STAFF: lec
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: dlautils-6-0-3-1
DATE: 4/7/2016
STAFF: dbm 
CHANGES:
1) DLAInstall: Removed chmod for HISTORY, system_docs and java files

TAG: dlautils-6-0-1-1
DATE: 11/16/2015
STAFF: dbm 
CHANGES:
1) DLAInstall: Create INPUTDIR is needed

TAG: dlautils-6-0-0-2
DATE: 08/24/2015
STAFF: dbm 
CHANGES:
1) DLAJobStreamFunctions.sh: check for archive file before trying to zip it

TAG: dlautils-6-0-0-1
DATE: 07/22/2015
STAFF: lec 
CHANGES:
1) TR11750/postgres

TAG: dlautils-5-2-2-2
TAG: dlautils-5-2-2-1
DATE: 05/22/2015, 05/26/2015
STAFF: lec
CHANGES:
1) TR12029/loadQueueReport.py/flippable for postgres

TAG: dlautils-5-2-1-4
DATE: 04/03/2015
STAFF: dbm
CHANGES:
1) DLAJobStreamFunctions.sh: Remove "pg" from "env | pg | sort"

TAG: dlautils-5-2-1-3
DATE: 03/11/2015
STAFF: dbm
CHANGES:
1) DLAJobStreamFunctions.sh: Remove \n from echo statements
2) JobStreamTemplate.sh: Remove \n from echo statements

TAG: dlautils-5-2-1-2
DATE: 02/24/2015
STAFF: dbm
CHANGES:
1) DLAJobStreamFunctions.sh: gzip the archive file after creating it

TAG: dlautils-5-2-1-1
DATE: 02/23/2015
STAFF: dbm
CHANGES:
1) DLAJobStreamFunctions.sh: use tar instead of jar for archiving for
                             solaris/linux compatability

TAG: dlautils-4-4-1-2
DATE: 04/11/2011
STAFF: sc
CHANGES: Added more commenting for the new -v option

TAG: dlautils-4-4-1-1
TAG: dlautils-4-4-4-1
DATE: 02/24/2011
STAFF: sc
CHANGES:
1) GBRecordSplitter.py - added -v option to consider the record complete when
   'variation' qualifier found.

TAG: dlautils-4-4-0-1
DATE: 10/13/2010
STAFF: dbm
CHANGES:
1) loadQueueReport.py: modified to make it stop printing duplicate
   "No Files Queued" messages when there are multiple file types per
   job stream.

TAG: dlautils-4-3-3-1
DATE: 03/11/2010
STAFF: dbm
CHANGES: merge tr10086 branch to trunk
